# HeadHunter

./: .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  app  docker-compose.yml  entrypoint.sh  gitlab-ci.yaml  manage.py  pyproject.toml  requirements.txt
agile_hh/: asgi.py  settings.py  urls.py  wsgi.py
agile_hh/agile_hh/: settings.py
authapp/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
candidateapp/: admin.py  forms.py  models.py  urls.py  views.py
candidateapp/migrations/: 0001_initial.py
companyapp/: admin.py  forms.py  models.py  urls.py  views.py
docker/development/: nginx.docker  python-cli.docker  web-app.dockerfile
epic_habr/: db.sqlite3  manage.py  requirements.txt
epic_habr/common/: patterns.py  variables.py
epic_habr/epic_habr/: asgi.py  settings.py  urls.py  wsgi.py
epic_habr/mainapp/: admin.py  apps.py  models.py  urls.py  views.py
epic_habr/userapp/: admin.py  forms.py  models.py  urls.py  views.py
favoriteapp/: models.py  urls.py  views.py
favoriteapp/migrations/: 0001_initial.py
favorites/: models.py  urls.py  views.py
mainapp/: mixins.py  models.py  services.py  tests.py  urls.py  views.py
messageapp/: apps.py  forms.py  models.py  receivers.py  urls.py  views.py
moderatorapp/: urls.py  views.py
templates/: base.html  base_canvas.html  happy_new_year.html
templates_base/: enter_user.html  index.html  register_candidate.html
templates_base/style/: style.css
tests/: help_test.txt
vacancyparser/: help  items.py  pipelines.py  runner.py  settings.py  vacancies.json
(+103 files in other folders)
