[tool.poetry]
name = "dev-hh"
version = "0.1.0"
description = ""
authors = ["development team"]
readme = "README.md"
packages = [{include = "dev_hh"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.4"
flake8 = "^6.0.0"
isort = "^5.11.2"
psycopg2-binary = "^2.9.5"
django-debug-toolbar = "^3.8.1"
django-debug-toolbar-template-profiler = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
